--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,56 +1,54 @@
 version: 2
 
 aliases:
-
   - defaults: &defaults
       docker:
         - image: circleci/node:carbon
       working_directory: ~/code
   - &restore-repo-cache
-      key: v1-goodcity-charity-{{ .Environment.CIRCLE_SHA1 }}
+    key: v1-goodcity-charity-{{ .Environment.CIRCLE_SHA1 }}
   - &restore-yarn-cache
-      keys:
-        - v1-goodcity-charity-packages-{{ checksum "yarn.lock" }}
+    keys:
+      - v1-goodcity-charity-packages-{{ checksum "yarn.lock" }}
   - &save-yarn-cache
-      key: v1-goodcity-charity-packages-{{ checksum "yarn.lock" }}
-      paths:
-        - node_modules
-        - ~/.cache/yarn
+    key: v1-goodcity-charity-packages-{{ checksum "yarn.lock" }}
+    paths:
+      - node_modules
+      - ~/.cache/yarn
   - &restore-ios-yarn-cache
-      keys:
-        - v1-goodcity-charity-ios-yarn-packages-{{ checksum "yarn.lock" }}
+    keys:
+      - v1-goodcity-charity-ios-yarn-packages-{{ checksum "yarn.lock" }}
   - &save-ios-yarn-cache
-      key: v1-goodcity-charity-ios-yarn-packages-{{ checksum "yarn.lock" }}
-      paths:
-        - node_modules
-        - ~/.cache/yarn
-  - &yarn
-    |
-      yarn install --non-interactive --cache-folder ~/.cache/yarn --frozen-lockfile
+    key: v1-goodcity-charity-ios-yarn-packages-{{ checksum "yarn.lock" }}
+    paths:
+      - node_modules
+      - ~/.cache/yarn
+  - &yarn |
+    yarn install --non-interactive --cache-folder ~/.cache/yarn --frozen-lockfile
   - &restore-bower-cache
-      key: v1-goodcity-charity-bower-{{ checksum "bower.json" }}
+    key: v1-goodcity-charity-bower-{{ checksum "bower.json" }}
   - &save-bower-cache
-      key: v1-goodcity-charity-bower-{{ checksum "bower.json" }}
-      paths:
-        - bower_components
+    key: v1-goodcity-charity-bower-{{ checksum "bower.json" }}
+    paths:
+      - bower_components
   - &restore-ios-bower-cache
-      key: v1-goodcity-charity-ios-bower-components-{{ checksum "bower.json" }}
+    key: v1-goodcity-charity-ios-bower-components-{{ checksum "bower.json" }}
   - &save-ios-bower-cache
-      key: v1-goodcity-charity-ios-bower-components-{{ checksum "bower.json" }}
-      paths:
-        - bower_components
+    key: v1-goodcity-charity-ios-bower-components-{{ checksum "bower.json" }}
+    paths:
+      - bower_components
   - &restore-bundle-cache
-      key: v1-goodcity-charity-bundle-{{ checksum "Gemfile.lock" }}
+    key: v1-goodcity-charity-bundle-{{ checksum "Gemfile.lock" }}
   - &save-bundle-cache
-      key: v1-goodcity-charity-bundle-{{ checksum "Gemfile.lock" }}
-      paths:
-        - vendor/bundle
+    key: v1-goodcity-charity-bundle-{{ checksum "Gemfile.lock" }}
+    paths:
+      - vendor/bundle
   - &restore-ios-bundler-cache
-      key: v1-goodcity-charity-ios-bundle-{{ checksum "Gemfile.lock" }}
+    key: v1-goodcity-charity-ios-bundle-{{ checksum "Gemfile.lock" }}
   - &save-ios-bundler-cache
-      key: v1-goodcity-charity-ios-bundle-{{ checksum "Gemfile.lock" }}
-      paths:
-        - vendor/bundle
+    key: v1-goodcity-charity-ios-bundle-{{ checksum "Gemfile.lock" }}
+    paths:
+      - vendor/bundle
 
 jobs:
   checkout_code:
@@ -76,7 +74,7 @@ jobs:
   test_cases:
     <<: *defaults
     docker:
-      - image: circleci/node:6-browsers
+      - image: circleci/node:8-browsers
     environment:
       JOBS: 1
     steps:
@@ -148,8 +146,8 @@ jobs:
       - run:
           name: Setup Environment variables
           command: |
-              echo 'export ASSET_HOST_URL=$(if [ "$CIRCLE_BRANCH" == "live" ]; then echo "https://browse.goodcity.hk/assets"; else echo "https://browse-staging.goodcity.hk/assets"; fi)' >> $BASH_ENV
-              echo 'export APP_VERSION=$(jq -r ".version" package.json)' >> $BASH_ENV
+            echo 'export ASSET_HOST_URL=$(if [ "$CIRCLE_BRANCH" == "live" ]; then echo "https://browse.goodcity.hk/assets"; else echo "https://browse-staging.goodcity.hk/assets"; fi)' >> $BASH_ENV
+            echo 'export APP_VERSION=$(jq -r ".version" package.json)' >> $BASH_ENV
       - attach_workspace:
           at: ~/code
       - run: mv dist-www/ dist
@@ -171,7 +169,7 @@ jobs:
   ember_cordova_build:
     <<: *defaults
     environment:
-        EMBER_CLI_CORDOVA: "1"
+      EMBER_CLI_CORDOVA: "1"
     steps:
       - restore-cache: *restore-repo-cache
       - restore-cache: *restore-yarn-cache
@@ -181,9 +179,9 @@ jobs:
           command: echo 'export STAGING=$(if [ "$CIRCLE_BRANCH" == "live" ]; then echo false; else echo true; fi)' >> $BASH_ENV
       - run:
           command: |
-              npm rebuild node-sass
-              echo "Building for staging (true/false): $STAGING"
-              yarn run ember build --environment=production
+            npm rebuild node-sass
+            echo "Building for staging (true/false): $STAGING"
+            yarn run ember build --environment=production
       - run: mv dist/ cordova/www
       - persist_to_workspace:
           root: .
@@ -210,9 +208,9 @@ jobs:
       - run:
           name: Setup Environment variables
           command: |
-              echo 'export ENVIRONMENT=$(if [ "$CIRCLE_BRANCH" == "live" ]; then echo production; else echo staging; fi)' >> $BASH_ENV
-              echo 'export PATH=$PATH:`yarn bin`' >> $BASH_ENV
-              echo 'export PATH=$PATH:$ANDROID_HOME/tools/gradle/bin' >> $BASH_ENV
+            echo 'export ENVIRONMENT=$(if [ "$CIRCLE_BRANCH" == "live" ]; then echo production; else echo staging; fi)' >> $BASH_ENV
+            echo 'export PATH=$PATH:`yarn bin`' >> $BASH_ENV
+            echo 'export PATH=$PATH:$ANDROID_HOME/tools/gradle/bin' >> $BASH_ENV
       - run:
           name: Install Gradle 3.3
           command: |
@@ -254,8 +252,8 @@ jobs:
     working_directory: ~/code
     shell: /bin/bash --login -eo pipefail
     environment:
-        EMBER_CLI_CORDOVA: "1"
-        CIRCLE_ARTIFACTS: /Users/distiller/code/cordova/platforms/ios/build/device
+      EMBER_CLI_CORDOVA: "1"
+      CIRCLE_ARTIFACTS: /Users/distiller/code/cordova/platforms/ios/build/device
 
     steps:
       - checkout
@@ -274,9 +272,9 @@ jobs:
             echo 'export CERTIFICATE=$(if [ "$CIRCLE_BRANCH" == "live" ]; then echo 'Goodcity_2019.p12'; else echo 'GoodCity_2019_Development.p12'; fi)' >> $BASH_ENV
       - run:
           command: |
-              npm rebuild node-sass
-              echo "Building for staging (true/false): $STAGING"
-              yarn run ember build --environment=production
+            npm rebuild node-sass
+            echo "Building for staging (true/false): $STAGING"
+            yarn run ember build --environment=production
       - run: mv dist/ cordova/www
       - persist_to_workspace:
           root: .
@@ -290,15 +288,15 @@ jobs:
       - run:
           name: Download Provisioning Profile
           command: |
-              mkdir -pv ~/Library/MobileDevice/Provisioning\ Profiles/
-              yarn run azure-filestore download -d browse/$ENVIRONMENT -f $PROVISIONING_PROFILE
-              mv $PROVISIONING_PROFILE ~/Library/MobileDevice/Provisioning\ Profiles
+            mkdir -pv ~/Library/MobileDevice/Provisioning\ Profiles/
+            yarn run azure-filestore download -d browse/$ENVIRONMENT -f $PROVISIONING_PROFILE
+            mv $PROVISIONING_PROFILE ~/Library/MobileDevice/Provisioning\ Profiles
           working_directory: ~/code
       - run:
           name: Download P12 certificate
           command: |
-              yarn run azure-filestore download -f $CERTIFICATE
-              mv $CERTIFICATE ~/code/fastlane
+            yarn run azure-filestore download -f $CERTIFICATE
+            mv $CERTIFICATE ~/code/fastlane
           working_directory: ~/code
       - run:
           name: Install CocoaPods
@@ -326,53 +324,52 @@ jobs:
           command: bundle exec fastlane ios ${ENVIRONMENT}
           working_directory: ~/code
 
-
 workflows:
-    version: 2
-    build_and_bundle:
-      jobs:
-        - checkout_code
-        - package_dependencies:
-            requires:
-              - checkout_code
-        - test_cases:
-            requires:
-              - package_dependencies
-        - upload-coverage:
-            requires:
-              - package_dependencies
-              - test_cases
-            filters:
-              branches:
-                only: /^(master|live)$/
-        - www_build:
-            requires:
-              - package_dependencies
-              - test_cases
-            filters:
-              branches:
-                only: /^(master|live)$/
-        - www-deploy:
-            requires:
-              - www_build
-            filters:
-              branches:
-                only: /^(master|live)$/
-        - ember_cordova_build:
-            requires:
-              - test_cases
-            filters:
-              branches:
-                only: /^(master|live)$/
-        - android_build_and_deploy:
-            requires:
-              - ember_cordova_build
-            filters:
-              branches:
-                only: /^(master|live)$/
-        - ios_build_and_deploy:
-            requires:
-              - test_cases
-            filters:
-              branches:
-                only: /^(master|live)$/
+  version: 2
+  build_and_bundle:
+    jobs:
+      - checkout_code
+      - package_dependencies:
+          requires:
+            - checkout_code
+      - test_cases:
+          requires:
+            - package_dependencies
+      - upload-coverage:
+          requires:
+            - package_dependencies
+            - test_cases
+          filters:
+            branches:
+              only: /^(master|live)$/
+      - www_build:
+          requires:
+            - package_dependencies
+            - test_cases
+          filters:
+            branches:
+              only: /^(master|live)$/
+      - www-deploy:
+          requires:
+            - www_build
+          filters:
+            branches:
+              only: /^(master|live)$/
+      - ember_cordova_build:
+          requires:
+            - test_cases
+          filters:
+            branches:
+              only: /^(master|live)$/
+      - android_build_and_deploy:
+          requires:
+            - ember_cordova_build
+          filters:
+            branches:
+              only: /^(master|live)$/
+      - ios_build_and_deploy:
+          requires:
+            - test_cases
+          filters:
+            branches:
+              only: /^(master|live)$/
