--- a/package.json
+++ b/package.json
@@ -110,7 +110,7 @@
     "cloudinary-jquery-file-upload": "^2.2.0",
     "codeclimate-test-reporter": "^0.5.0",
     "cordova": "^6.5.0",
-    "cordova-lib": "https://github.com/crossroads/goodcity-lib.git#master",
+    "cordova-lib": "https://github.com/crossroads/goodcity-lib.git#GCW-2783-Migrate-ember-i18n-to-ember-intl-in-browser-app-lib",
     "cordova-update-config": "^1.0.2",
     "ember-i18n-intl-migrator": "^0.4.0",
     "ember-intl": "^4.1.0",
