--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -290,9 +290,9 @@ workflows:
       - ember_cordova_build:
           requires:
             - package_dependencies
-          filters:
-            branches:
-              only: /^(master|live)$/
+          # filters:
+            # branches:
+              # only: /^(master|live)$/
       - android_build_and_deploy:
           requires:
             - ember_cordova_build
