--- a/Dockerfile-cordova
+++ b/Dockerfile-cordova
@@ -1,4 +1,5 @@
-FROM cimg/android:2022.04-browsers
+# Node 18, API:27-34
+FROM cimg/android:2023.08-browsers
 
 WORKDIR /home/circleci/project
 USER circleci
@@ -8,14 +9,14 @@ ENV PATH=$PATH:/home/circleci/project/node_modules/cordova/bin/
 ENV ENVIRONMENT=staging
 RUN cordova telemetry off
 COPY --chown=circleci . /home/circleci/project/
-RUN node --version \
-  && cordova --version \
-  && gradle -version \
-  && java -version
 
 # docker build -f Dockerfile-cordova -t browse.goodcity.hk:latest .
 # docker run -it browse.goodcity.hk:latest /bin/bash
 # cordova build android --debug --device
+# With Gradle stacktrace (useful for build errors)
+# cd platforms/android
+# ./gradlew --info cdvBuildDebug -b build.gradle
+# Gradle logs are in ~/.gradle/daemon
 
 # ADVANCED USAGE KEEPS IMAGE RUNNING TO MAINTAIN GRADLE CACHE
 # ENVIRONMENT=staging EMBER_CLI_CORDOVA=1 yarn run ember build
