--- a/cordova/package.json
+++ b/cordova/package.json
@@ -2,9 +2,11 @@
   "name": "hk.goodcity.browsestaging",
   "version": "0.21.1",
   "displayName": "S. GoodCity.HK for Charities",
-  "dependencies": {},
+  "dependencies": {
+    "cordova": "^12.0.0"
+  },
   "devDependencies": {
-    "cordova-android": "^11.0.0",
+    "cordova-android": "^12.0.1",
     "cordova-plugin-inappbrowser": "^5.0.0",
     "cordova-plugin-statusbar": "^3.0.0"
   },
