--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -301,15 +301,15 @@ workflows:
       - ember_cordova_build:
           requires:
             - package_dependencies
-          # filters:
-          #   branches:
-          #     only: /^(master|live)$/
+          filters:
+            branches:
+              only: /^(master|live)$/
       - android_build_and_deploy:
           requires:
             - ember_cordova_build
-          # filters:
-          #   branches:
-          #     only: /^(master|live)$/
+          filters:
+            branches:
+              only: /^(master|live)$/
 
 
       #################### NOT CURRENTLY BUILDING IOS 
