--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -185,12 +185,12 @@ jobs:
       - image: cimg/android:2023.08-browsers
     environment:
       JVM_OPTS: -Xmx3200m
-      CIRCLE_ARTIFACTS: /home/circleci/code/cordova/platforms/android/app/build/outputs/apk/release/
+      CIRCLE_ARTIFACTS: /home/circleci/code/cordova/platforms/android/app/build/outputs/apk
     steps:
       - restore_cache: *restore-repo-cache
       - restore_cache: *restore-yarn-cache
       - restore_cache: *restore-bundle-cache
-      - run: bundle config set --local deployment 'true' && (bundle check || bundle install --jobs=2 --retry=3)
+      - run: bundle config set --local deployment 'true' && bundle install --jobs=2 --retry=3
       - save_cache: *save-bundle-cache
       - attach_workspace:
           at: ~/code
@@ -212,11 +212,11 @@ jobs:
             node rename_package.js
             cordova platform add android
             if [ "$ENVIRONMENT" == "production" ]; then
-              yarn run cordova build android --release -- \
+              cordova build android --release -- \
                 --packageType=apk --keystore=goodcity.keystore --storePassword="${GOODCITY_KEYSTORE_PASSWORD}" \
                 --alias="${GOODCITY_KEYSTORE_ALIAS}" --password="${GOODCITY_KEYSTORE_PASSWORD}"
             else
-              yarn run cordova build android --debug --device
+              cordova build android --debug --device
             fi
           working_directory: cordova
       - store_artifacts:
