--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -306,13 +306,13 @@ workflows:
             - package_dependencies
           filters:
             branches:
-              only: /^(master|live|update-xcode-android)$/
+              only: /^(master|live)$/
       - android_build_and_deploy:
           requires:
             - ember_cordova_build
           filters:
             branches:
-              only: /^(master|live|update-xcode-android)$/
+              only: /^(master|live)$/
 
 
       #################### NOT CURRENTLY BUILDING IOS 
